--- a/2.Chatbot/2.vector_retriever.ipynb
+++ b/2.Chatbot/2.vector_retriever.ipynb
@@ -185,6 +185,119 @@
    "source": [
     "vectorstore.similarity_search(\"dog\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6a7a568",
+   "metadata": {},
+   "source": [
+    "### Retrievers\n",
+    "LangChain VectorStore objects do not subclass Runnable, and so cannot immediately be integrated into LangChain Expression Language chains.\n",
+    "\n",
+    "LangChain Retrievers are Runnables, so they implement a standard set of methods (e.g., synchronous and asynchronous invoke and batch operations) and are designed to be incorporated in LCEL chains.\n",
+    "\n",
+    "We can create a simple version of this ourselves, without subclassing Retriever. If we choose what method we wish to use to retrieve documents, we can create a runnable easily. Below we will build one around the similarity_search method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f701ae93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[Document(id='027bdc3a-be42-4009-a34b-a5e1ea8f28f4', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are great companions, known for their loyalty and friendliness.')],\n",
+       " [Document(id='05879f9d-7ac5-417e-90db-73abb9a4bf85', metadata={'source': 'mammal-pets-doc'}, page_content='Cats are independent pets that often enjoy their own space.')]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Method: 1\n",
+    "from langchain_core.documents import Document\n",
+    "from langchain_core.runnables import RunnableLambda\n",
+    "\n",
+    "retriever = RunnableLambda(vectorstore.similarity_search).bind(k=1)\n",
+    "retriever.batch([\"dog\", \"cat\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7345c6f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[Document(id='027bdc3a-be42-4009-a34b-a5e1ea8f28f4', metadata={'source': 'mammal-pets-doc'}, page_content='Dogs are great companions, known for their loyalty and friendliness.')],\n",
+       " [Document(id='05879f9d-7ac5-417e-90db-73abb9a4bf85', metadata={'source': 'mammal-pets-doc'}, page_content='Cats are independent pets that often enjoy their own space.')]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Method: 2\n",
+    "retriever = vectorstore.as_retriever(\n",
+    "    search_type = \"similarity\",\n",
+    "    search_kwargs = { \"k\": 1 }\n",
+    ")\n",
+    "retriever.batch([\"dog\", \"cat\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7d55961b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dogs are great companions, known for their loyalty and friendliness. \\n'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# RAG\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "message = \"\"\"\n",
+    "    Answer this question using the provided context only.\n",
+    "    {question}\n",
+    "    \n",
+    "    Context:\n",
+    "    {context}\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([(\"human\", message)])\n",
+    "\n",
+    "rag_chain = { \"context\": retriever, \"question\": RunnablePassthrough() } | prompt | llm\n",
+    "\n",
+    "response = rag_chain.invoke(\"Tell me about dogs.\")\n",
+    "response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e096fe6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
